@@ -22,54 +22,7 @@ FONT_MODE=1;
 ;height = 8 (normal), 9 (shadowed), 10 (outlined)
 FONT_WIDTH=8;
 FONT_HEIGHT=10;
-;Lists
-CONTAINERLIST_TITLE_XY=7,112;
-CONTAINERLIST_TITLE_UNSELECTED_STRING="Folders";
-CONTAINERLIST_TITLE_UNSELECTED_COLOR=555588;
-CONTAINERLIST_TITLE_SELECTED_STRING=  "<Select Folder>";
-CONTAINERLIST_TITLE_SELECTED_COLOR=AAAAFF;
-ENTRIESLIST_TITLE_XY=147,112;
-ENTRIESLIST_TITLE_UNSELECTED_STRING="Songs";
-ENTRIESLIST_TITLE_UNSELECTED_COLOR=555588;
-ENTRIESLIST_TITLE_SELECTED_STRING=  "<Select Song>";
-ENTRIESLIST_TITLE_SELECTED_COLOR="AAAAFF;
-CONTAINERLIST_X_RANGE=7,127;
-CONTAINERLIST_Y_RANGE=132,224;
-ENTRIESLIST_X_RANGE=147,475;
-ENTRIESLIST_Y_RANGE=132,224;
-LISTS_TITLE_COLOR=33CC33;
-ENTRIESLIST_COLOR=888888;
-SELECTED_ENTRY_COLOR=FFFFFF;
-;Messages:
-PROGRAM_VERSION_XY=-2,1;
-PROGRAM_VERSION_COLOR=FFFFFF;
-BUFFER_PERCENTAGE_XY=7,16;
-BUFFER_PERCENTAGE_COLOR=FFFFFF;
-METADATA_X=7;
-METADATA_Y_RANGE=27,48;
-METADATA_COLOR=FF00FF;
-METADATA_TITLE_COLOR=FFFFFF;
-STREAM_OPENING_XY=-2,16;
-STREAM_OPENING_ERROR_XY=-2,16;
-STREAM_OPENING_SUCCESS_XY=-2,16;
-STREAM_OPENING_COLOR=FFFFFF;
-STREAM_OPENING_ERROR_COLOR=FFFFFF;
-STREAM_OPENING_SUCCESS_COLOR=FFFFFF;
-CLEAN_ON_NEW_STREAM_Y_RANGE=14,48;
-ACTIVE_COMMAND_XY=-1,64;
-ACTIVE_COMMAND_COLOR=00BBAA;
-ERROR_MESSAGE_XY=7,240;
-ERROR_MESSAGE_COLOR=999955;
-NETWORK_ENABLING_XY=-1,240;
-NETWORK_DISABLING_XY=-1,240;
-NETWORK_READY_XY=-1,240;
-NETWORK_ENABLING_COLOR=00BBAA;
-NETWORK_DISABLING_COLOR=FF0000;
-NETWORK_READY_COLOR=00BBAA;
-CLOCK_XY=344,1;
-CLOCK_COLOR=FFFFFF;
-BATTERY_XY=420,1;
-BATTERY_COLOR=FFFFFF;
+
 ;Screen Specific elements:
 FIRST_ENTRY_X=28;
 FIRST_ENTRY_Y=32;
@@ -80,3 +33,29 @@ COLOR_ACTIVE_STATE=FF0000;
 COLOR_SELECTED_STATE=FFFFFF;
 COLOR_NOT_SELECTED_STATE=888888;
 COLOR_ACTIVE_AND_SELECTED_STATE=E39090;
+
+
+;Messages:
+PROGRAM_VERSION_XY=7,1;
+PROGRAM_VERSION_COLOR=62F024;
+
+
+ACTIVE_COMMAND_XY=-1,64;
+ACTIVE_COMMAND_COLOR=FFFFFF;
+
+ERROR_MESSAGE_XY=7,244;
+ERROR_MESSAGE_COLOR=FFFFFF;
+
+NETWORK_ENABLING_XY=-1,244;
+NETWORK_DISABLING_XY=-1,244;
+NETWORK_READY_XY=-1,244;
+NETWORK_ENABLING_COLOR=00BBAA;
+NETWORK_DISABLING_COLOR=FF0000;
+NETWORK_READY_COLOR=00BBAA;
+
+CLOCK_XY=350,1;
+CLOCK_COLOR=FFFFFF;
+
+BATTERY_XY=425,1;
+BATTERY_COLOR=FFFFFF;
+
