@@ -51,6 +51,7 @@
 	#define MID_DECODE_STREAM_OPEN_ERROR	0x00000070
 	#define MID_DECODE_STREAM_OPEN			0x00000080
 	#define MID_NEW_METADATA_AVAILABLE		0x000000A0
+	#define MID_TIME_UPDATED				0x000000A1
 	#define MID_THDECODE_DECODING_DONE		0x000000B1
 	#define MID_BUFF_PERCENT_UPDATE			0x00000090
 	#define MID_TCP_CONNECTING_PROGRESS		0x000000C0
@@ -65,8 +66,8 @@
 	#define MID_ONVBLANK					0x01000020
 	#define MID_ONBATTERY_CHANGE			0x01000040
 	#define MID_ONTIME_CHANGE				0x01000041
-	#define MID_USB_ENABLE				0x01000050
-	#define MID_USB_DISABLE				0x01000051
+	#define MID_USB_ENABLE					0x01000050
+	#define MID_USB_DISABLE					0x01000051
 
 	class CPSPThread;
 	class CPSPApp;
